tested 'walk', 'list-walk', 'map-walk', 'apply', 'default-to' and 'throw' functions

--- a/stylesheets/aleksi/general/_is-of-type.scss
+++ b/stylesheets/aleksi/general/_is-of-type.scss
@@ -47,7 +47,7 @@
 
   // only test against valid type names
   @else if type-of($type) != string {
-    $e: throw-error('$type must be a string or a list of strings.');
+    $e: throw-error('$type must be a string or a list of strings, was #{inspect($type)}.');
   }
 
   @return if( type-of($value) == $type, true, false );
