tested basic math function 'add()', 'diff()', 'mult()' and 'div()'

--- a/stylesheets/aleksi/math/_add.scss
+++ b/stylesheets/aleksi/math/_add.scss
@@ -50,3 +50,15 @@
 
   @return $sum;
 }
+
+// =sum( $terms... )
+// -----------------------------------------------------------------------------
+/// @alias add
+///
+/// @access public
+/// @since 0.1.0
+
+@function sum( $terms... )
+{
+  @return add($terms...);
+}
