--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -17,6 +17,12 @@
 @import "aleksi/general/walk";
 @import "aleksi/general/apply";
 
+// MATH
+@import "aleksi/math/add";
+@import "aleksi/math/subtract";
+@import "aleksi/math/multiply";
+@import "aleksi/math/divide";
+
 // LISTS
 @import "aleksi/lists/list-walk";
 
