replaced 'list-walk()' with 'sl-walk()' and redefined 'walk()'
* 'sl-walk()' had the exact same behaviour as 'list-walk()'.

* because 'walk()' behaves in a similar fashion to 'append()' by also working on maps, and that 'append()' is listed in the 'list functions' in sass's documentation, 'walk()' was moved to the list functions.

* added tests to verify that 'apply()' and 'walk()' have different behaviour when passed a simple value.

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -6,4 +6,4 @@
 //// @group Lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "aleksi/lists/list-walk";
+@import "aleksi/lists/walk";
