added and tested 'previous()' and 'next()' list functions

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -6,4 +6,6 @@
 //// @group Lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/lists/next";
+@import "aleksi/lists/previous";
 @import "aleksi/lists/walk";
