--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -24,6 +24,8 @@
 
 // LISTS
 @import "aleksi/lists/walk";
+@import "aleksi/lists/next";
+@import "aleksi/lists/previous";
 
 // MAPS
 @import "aleksi/maps/map-walk";
