bundle SassyLists instead of importing partials
* SassyLists doesn't handle loading its partial's depencies and doing it manually is too much of a hassle

--- a/stylesheets/aleksi/general/_is-of-type.scss
+++ b/stylesheets/aleksi/general/_is-of-type.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "SassyLists/every";
+@import "SassyLists";
 @import "aleksi/general/throw";
 
 // =is-of-type( $value, $type )
