--- a/stylesheets/aleksi/math/_add.scss
+++ b/stylesheets/aleksi/math/_add.scss
@@ -4,8 +4,7 @@
 //// @group Math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "SassyLists/every";
-@import "SassyLists/slice";
+@import "SassyLists";
 
 // =add( $terms... )
 // -----------------------------------------------------------------------------
