--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -23,9 +23,10 @@
 @import "aleksi/math/divide";
 
 // LISTS
-@import "aleksi/lists/walk";
+@import "aleksi/lists/prepend";
 @import "aleksi/lists/next";
 @import "aleksi/lists/previous";
+@import "aleksi/lists/walk";
 
 // MAPS
 @import "aleksi/maps/map-walk";
