--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -23,6 +23,7 @@
 @import "aleksi/math/divide";
 
 // LISTS
+@import "aleksi/lists/separator";
 @import "aleksi/lists/prepend";
 @import "aleksi/lists/next";
 @import "aleksi/lists/previous";
