--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -6,6 +6,7 @@
 //// @group Lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/lists/separator";
 @import "aleksi/lists/prepend";
 @import "aleksi/lists/next";
 @import "aleksi/lists/previous";
