add 'depth()' and 'map-depth()' functions

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -12,3 +12,4 @@
 @import "aleksi/lists/previous";
 @import "aleksi/lists/walk";
 @import "aleksi/lists/list-filter";
+@import "aleksi/lists/depth";
