added 'map-find-key()', 'map-has-keys()' and 'map-has-deep-key()' functions

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -7,6 +7,8 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/maps/debug-map";
+@import "aleksi/maps/map-find";
+@import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-depth";
