--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -32,6 +32,8 @@
 @import "aleksi/lists/depth";
 
 // MAPS
+@import "aleksi/maps/map-find";
+@import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-depth";
