added the 'map-select()' function

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -11,4 +11,4 @@
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
-@import "aleksi/maps/map-depth";
+@import "aleksi/maps/map-depth";@import "aleksi/maps/map-select";
