--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -37,5 +37,6 @@
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-depth";
+@import "aleksi/maps/map-select";
 
 @include runner-end;
