added 'map-sort-keys()' and 'map-sort-values()' functions
* TODO: the 'map-sort-values()' doesn't handle duplicate values yet. If a value is found two times, it will be once in the ordered part of the map, and once again at the end of the map. Instead it should be twice, next to each other, in the ordered part of the map

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -8,7 +8,9 @@
 
 @import "aleksi/maps/debug-map";
 @import "aleksi/maps/map-find";
+@import "aleksi/maps/map-depth";
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
-@import "aleksi/maps/map-depth";@import "aleksi/maps/map-select";
+@import "aleksi/maps/map-select";
+@import "aleksi/maps/map-sort";
