--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -33,10 +33,11 @@
 
 // MAPS
 @import "aleksi/maps/map-find";
+@import "aleksi/maps/map-depth";
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
-@import "aleksi/maps/map-depth";
 @import "aleksi/maps/map-select";
+@import "aleksi/maps/map-sort";
 
 @include runner-end;
