added 'map-zip()' map function and 'wrap-in-list()' list function

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -14,3 +14,4 @@
 @import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
+@import "aleksi/maps/map-zip";
