added the 'map-unique()' function

--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -38,6 +38,7 @@
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-filter";
+@import "aleksi/maps/map-unique";
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
 @import "aleksi/maps/map-zip";
