added 'is-list()' and 'is-map()' functions
* Using these functions when testing data-types will consider the empty map `()` as maps, and arglists as lists.

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -6,6 +6,7 @@
 //// @group Lists
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/lists/is-list";
 @import "aleksi/lists/set-list-separator";
 @import "aleksi/lists/prepend";
 @import "aleksi/lists/next";
