--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -6,6 +6,7 @@
 //// @group Maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
+@import "aleksi/maps/is-map";
 @import "aleksi/maps/debug-map";
 @import "aleksi/maps/map-find";
 @import "aleksi/maps/map-depth";
