--- a/stylesheets/aleksi/maps/_map-depth.scss
+++ b/stylesheets/aleksi/maps/_map-depth.scss
@@ -26,7 +26,7 @@
 
 @function map-depth( $map )
 {
-  @if type-of($map) != 'map' {
+  @if not is-map($map) {
     @return throw-error('map-depth():: $map must be a map, was #{inspect($map)}.');
   }
 
