--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -36,6 +36,7 @@
 // MAPS
 @import "aleksi/maps/is-map";
 @import "aleksi/maps/map-find";
+@import "aleksi/maps/map-get-tuple";
 @import "aleksi/maps/map-depth";
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
