added 'map-clean()' function

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -14,6 +14,7 @@
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
 @import "aleksi/maps/map-unique";
+@import "aleksi/maps/map-clean";
 @import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
