--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -40,8 +40,9 @@
 @import "aleksi/maps/map-depth";
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-walk";
-@import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-unique";
+@import "aleksi/maps/map-clean";
+@import "aleksi/maps/map-filter";
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
 @import "aleksi/maps/map-zip";
