added 'map-get-deep()', 'map-extend()' and 'map-extend-deep()' functions

--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -19,3 +19,5 @@
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
 @import "aleksi/maps/map-zip";
+@import "aleksi/maps/map-merge-deep";
+@import "aleksi/maps/map-extend";
