--- a/tests/tests.scss
+++ b/tests/tests.scss
@@ -46,5 +46,7 @@
 @import "aleksi/maps/map-select";
 @import "aleksi/maps/map-sort";
 @import "aleksi/maps/map-zip";
+@import "aleksi/maps/map-merge-deep";
+@import "aleksi/maps/map-extend";
 
 @include runner-end;
